Peklti failai į jurkis.github.io

--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
-<html>
-    <head><link rel="stylesheet" href="index.css">
+<html lang="lt">
+    <head>
+        <!-- Google tag (gtag.js) -->
+
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE">
+    </script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-KSPPCGGZJE');
+    </script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>
+            Mano bandomasis puslapis
+        </title>
+        <meta name="description" content>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Labas, pasauli</h1>
-        <h2>The standard Lorem Ipsum passage, used since the 1500s</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumes.</p>
-        <h2>Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC</h2>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+        <div>
+            <h1>Antraštė 1</h1>
+            <p>
+                <a href="taikinys.html"
+                    title="Taikinys, kurį suvarpiau aš">Taikinys
+                    suvarpytasis</a>
+            </p>
+            <p>Antras paragrafas</p>
+        </div>
+        <div>
+            <h2>Antraštė 2</h2>
+            <p>
+                <a href="zodziai.html" title="Sugalvotų žodžių puslapis">Žodžių
+                    puslapis</a>
+            </p>
+            <p>Antras paragrafas</p>
+        </div>
+        <div>
+            <h3>Antraštė 3</h3>
+            <p>
+                <a href="naujas.html" title="Naujo dizaino puslapis">Naujas
+                    dizainas</a>
+            </p>
+            <p>Antras paragrafas</p>
+        </div>
+        <hr>
+        <div>
+            <p>Aš Strava'oje: <a href="https://strava.com/athletes/129115054"
+                    title="Mano vaikščiojimų pasiekimai Stravoje"
+                    class="strava-badge- strava-badge-follow" target="_blank">
+                    <img src="//badges.strava.com/echelon-sprite-16.png"
+                        alt="Strava">
+                </a>
+            </p>
+        </div>
+        <hr>
+        <div>
+            <h1>Aplankytos šalys</h1>
+            <p>
+                <iframe
+                    src="https://visitedplaces.com/embed/?map=world&projection=geoOrthographic&theme=dark-green&water=1&graticule=0&names=1&duration=2000&placeduration=100&slider=0&autoplay=1&autozoom=none&autostep=1&home=LT&places=My%20Home~LT~1_0_0_-23.9_-55.3*Europe~AL_AD_AT_BY_BE_BA_HR_CY_CZ_EE_FI_DE_HU_IT_LV_LI_LT.daaa44_LU_MC_ME_NL_MK_PL_RU_SM_RS_SK_SI_ES_CH_TR_UA_GB_VA_FR~2.4_12.1_53.3_-12.1_-53.3"
+                    style="width: 100%; height: 600px;"></iframe>
+            </p>
+        </div>
+        <footer>
+            <p>Autorius: Jurkis
+            </p>
+        </footer>
     </body>
 </html>
