Gero kampo pridėjimas

--- a/naujas.html
+++ b/naujas.html
@@ -32,5 +32,7 @@
                     </p>
                 </footer></div>
         </div>
+
+        <iframe width="100%" height="657px" src="https://rekvizitai.vz.lt/imoniu-duomenys/embed/300651551/" title="Įmonės profilis rekvizitai.lt" scrolling="no" frameborder="0" allow="clipboard-write; encrypted-media;" allowfullscreen></iframe>
     </body>
 </html>
