--- a/index.html
+++ b/index.html
@@ -1,72 +1,76 @@
 <!DOCTYPE html>
 <html lang="lt">
 
-<head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    <head>
+        <!-- Google tag (gtag.js) -->
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE"></script>
+        <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        gtag('config', 'G-KSPPCGGZJE');
-    </script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>
-        Mano bandomasis puslapis
-    </title>
-    <meta name="description" content>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
+  gtag('config', 'G-KSPPCGGZJE');
+</script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>
+            Mano bandomasis puslapis
+        </title>
+        <meta name="description" content>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body>
-    <div>
-        <h1>Antraštė 1</h1>
-        <p>
-            <a href="taikinys.html" title="Taikinys, kurį suvarpiau aš">Taikinys
-                suvarpytasis</a>
-        </p>
-        <p>Antras paragrafas</p>
-    </div>
-    <div>
-        <h2>Antraštė 2</h2>
-        <p>
-            <a href="zodziai.html" title="Sugalvotų žodžių puslapis">Žodžių
-                puslapis</a>
-        </p>
-        <p>Antras paragrafas</p>
-    </div>
-    <div>
-        <h3>Antraštė 3</h3>
-        <p>
-            <a href="naujas.html" title="Naujo dizaino puslapis">Naujas
-                dizainas</a>
-        </p>
-        <p>Antras paragrafas</p>
-    </div>
-    <hr>
-    <div>
-        <p>Aš Strava'oje: <a href="https://strava.com/athletes/129115054" title="Mano vaikščiojimų pasiekimai Stravoje"
-                class="strava-badge- strava-badge-follow" target="_blank">
-                <img src="//badges.strava.com/echelon-sprite-16.png" alt="Strava">
-            </a>
-        </p>
-    </div>
-    <hr>
-    <div>
-        <h1>Aplankytos šalys</h1>
-        <p>
-            <iframe
-                src="https://visitedplaces.com/embed/?map=world&projection=geoOrthographic&theme=dark-green&water=1&graticule=0&names=1&duration=2000&placeduration=100&slider=0&autoplay=1&autozoom=none&autostep=1&home=LT&places=My%20Home~LT~1_0_0_-23.9_-55.3*Europe~AL_AD_AT_BY_BE_BA_HR_CY_CZ_EE_FI_DE_HU_IT_LV_LI_LT.daaa44_LU_MC_ME_NL_MK_PL_RU_SM_RS_SK_SI_ES_CH_TR_UA_GB_VA_FR~2.4_12.1_53.3_-12.1_-53.3"
-                style="width: 100%; height: 600px;"></iframe>
-        </p>
-    </div>
-    <footer>
-        <p>Autorius: Jurkis
-        </p>
-    </footer>
-</body>
+    <body>
+        <div>
+            <h1>Antraštė 1</h1>
+            <p>
+                <a href="taikinys.html"
+                    title="Taikinys, kurį suvarpiau aš">Taikinys
+                    suvarpytasis</a>
+            </p>
+            <p>Antras paragrafas</p>
+        </div>
+        <div>
+            <h2>Antraštė 2</h2>
+            <p>
+                <a href="zodziai.html" title="Sugalvotų žodžių puslapis">Žodžių
+                    puslapis</a>
+            </p>
+            <p>Antras paragrafas</p>
+        </div>
+        <div>
+            <h3>Antraštė 3</h3>
+            <p>
+                <a href="naujas.html" title="Naujo dizaino puslapis">Naujas
+                    dizainas</a>
+            </p>
+            <p>Antras paragrafas</p>
+        </div>
+        <hr>
+        <div>
+            <p>Aš Strava'oje: <a href="https://strava.com/athletes/129115054"
+                    title="Mano vaikščiojimų pasiekimai Stravoje"
+                    class="strava-badge- strava-badge-follow" target="_blank">
+                    <img src="//badges.strava.com/echelon-sprite-16.png"
+                        alt="Strava">
+                </a>
+            </p>
+        </div>
+        <hr>
+        <div>
+            <h1>Aplankytos šalys</h1>
+            <p>
+                <iframe
+                    src="https://visitedplaces.com/embed/?map=world&projection=geoOrthographic&theme=dark-green&water=1&graticule=0&names=1&duration=2000&placeduration=100&slider=0&autoplay=1&autozoom=none&autostep=1&home=LT&places=My%20Home~LT~1_0_0_-23.9_-55.3*Europe~AL_AD_AT_BY_BE_BA_HR_CY_CZ_EE_FI_DE_HU_IT_LV_LI_LT.daaa44_LU_MC_ME_NL_MK_PL_RU_SM_RS_SK_SI_ES_CH_TR_UA_GB_VA_FR~2.4_12.1_53.3_-12.1_-53.3"
+                    style="width: 100%; height: 600px;"></iframe>
+            </p>
+        </div>
+        <footer>
+            <p>Autorius: Jurkis
+            </p>
+        </footer>
+    </body>
 
 </html>
