--- a/taikinys.html
+++ b/taikinys.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="lt">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE"></script>
+        <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KSPPCGGZJE');
+</script>
         <meta charset="UTF-8">
         <meta name="description" content="Free Web tutorials">
         <meta name="keywords" content="HTML, CSS, JavaScript">
