index ir naudnga failų atnaujinimas

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="zodziai.html" title="Sugalvotų žodžių puslapis">Žodžių
                     puslapis</a>
             </p>
-            <p>Antras paragrafas</p>
+            <p><a href="naudinga.html" title="Naudinga">Naudinga</a></p>
         </div>
         <div>
             <h3>Antraštė 3</h3>
