Įvairių html atnaujinimas

--- a/naudinga.html
+++ b/naudinga.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Naudos</title>
     </head>
+
     <body>
         <h1>Pixel telefono kodai</h1>
-        <p>*#*#4636#*#*</p>
-        <p>Paimta iš <a
-                href="https://droidwin.com/how-to-enable-5g-on-pixel-6a-6-pro/">šio
-                puslapio, skyrius
-                "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a></p>
+            <ul>
+                <li><code>*#*#4636#*#*</code>.
+                    <br> Atidaro telefono 'TESTING' meniu. Paimta iš <a
+                        href="https://droidwin.com/how-to-enable-5g-on-pixel-6a-6-pro/">šio
+                        puslapio, skyrius
+                        "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a></li>
+                <li>Pasiekti testavimo meniu</li>
+                <li>Keisti tinklo nustatymus</li>
+            </ul>
     </body>
+
 </html>
