Pridėtas eurų trackeris bei footeris

--- a/aplankytos_salys.html
+++ b/aplankytos_salys.html
@@ -1,4 +1,3 @@
-add html page default attributes
 <!DOCTYPE html>
 <html lang="lt">
 
@@ -18,7 +17,7 @@ add html page default attributes
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>
-            Mano bandomasis puslapis
+            Aplankytų šalių žemėlapis
         </title>
         <meta name="description" content>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,4 +31,5 @@ add html page default attributes
                 style="width: 100%; height: 600px;"></iframe>
         </p>
     </div>
+    
     <body>
