--- a/naudinga.html
+++ b/naudinga.html
@@ -9,15 +9,22 @@
 
     <body>
         <h1>Pixel telefono kodai</h1>
-            <ul>
-                <li><code>*#*#4636#*#*</code>.
-                    <br> Atidaro telefono 'TESTING' meniu. Paimta iš <a
-                        href="https://droidwin.com/how-to-enable-5g-on-pixel-6a-6-pro/">šio
-                        puslapio, skyrius
-                        "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a></li>
-                <li>Pasiekti testavimo meniu</li>
-                <li>Keisti tinklo nustatymus</li>
-            </ul>
+        <ul>
+            <li><code>*#*#4636#*#*</code>.
+                <br> Atidaro telefono 'TESTING' meniu. Paimta iš <a
+                    href="https://droidwin.com/how-to-enable-5g-on-pixel-6a-6-pro/">šio
+                    puslapio, skyrius
+                    "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a></li>
+            <li>Pasiekti testavimo meniu</li>
+            <li>Keisti tinklo nustatymus</li>
+        </ul>
+        <hr>
+        <footer>
+            <p>&copy; <span id="year"></span> Jurkis</p>
+        </footer>
+        <script>
+            // Set the current year dynamically
+            document.getElementById('year').textContent = new Date().getFullYear();
+        </script>
     </body>
-
 </html>
