--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
         <div>
             <h3>Antraštė 3</h3>
             <p>
-                <a href="naujas.html" title="Naujo dizaino puslapis">Naujas
-                    dizainas</a>
+                Pirmas paragrafass, kuris yra šiek tiek ilgesnis, kad užimtų
+                daugiau vietos. Šis paragrafas yra skirtas parodyti, kaip
+                atrodys tekstas, kai jis bus ilgesnis nei įprasta. Tai padeda
+                geriau suprasti, kaip puslapis atrodys su tikru turiniu.
             </p>
             <p>Antras paragrafas</p>
         </div>
