--- a/aplankytos_salys.html
+++ b/aplankytos_salys.html
@@ -23,13 +23,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
     </head>
-    <div>
-        <h1>Aplankytos šalys</h1>
-        <p>
-            <iframe
-                src="https://visitedplaces.com/embed/?map=world&projection=geoOrthographic&theme=dark-green&water=1&graticule=0&names=1&duration=2000&placeduration=100&slider=0&autoplay=1&autozoom=none&autostep=1&home=LT&places=My%20Home~LT~1_0_0_-23.9_-55.3*Europe~AL_AD_AT_BY_BE_BA_HR_CY_CZ_EE_FI_DE_HU_IT_LV_LI_LT.daaa44_LU_MC_ME_NL_MK_PL_RU_SM_RS_SK_SI_ES_CH_TR_UA_GB_VA_FR~2.4_12.1_53.3_-12.1_-53.3"
-                style="width: 100%; height: 600px;"></iframe>
-        </p>
-    </div>
-    
     <body>
+        <div>
+            <h1>Aplankytos šalys</h1>
+            <p>
+                <iframe
+                    src="https://visitedplaces.com/embed/?map=world&projection=geoOrthographic&theme=dark-green&water=1&graticule=0&names=1&duration=2000&placeduration=100&slider=0&autoplay=1&autozoom=none&autostep=1&home=LT&places=My%20Home~LT~1_0_0_-23.9_-55.3*Europe~AL_AD_AT_BY_BE_BA_HR_CY_CZ_EE_FI_DE_HU_IT_LV_LI_LT.daaa44_LU_MC_ME_NL_MK_PL_RU_SM_RS_SK_SI_ES_CH_TR_UA_GB_VA_FR~2.4_12.1_53.3_-12.1_-53.3"
+                    style="width: 100%; height: 600px;"></iframe>
+            </p>
+        </div>
+        <hr>
+        <footer>
+            <p>&copy; <span id="year"></span> Jurkis</p>
+        </footer>
+        <script>
+                // Set the current year dynamically
+                document.getElementById('year').textContent = new Date().getFullYear();
+            </script>
+
+    </body>
+</html>
