--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 </a>
             </p>
         </div>
-        <div><a href="https://www.eurobilltracker.com/?referer=243791">
-                <img src="https://www.eurobilltracker.com/banner.php"
-                    alt="banner for www.eurobilltracker.com"
-                    style="border: 0;" />
+        <div><a href="https://www.eurobilltracker.com/?referer=243791"
+                title="Eurobill Tracker"
+                target="_blank" rel="noopener noreferrer">
+                Visit my Eurobill Tracker
             </a></div>
         <hr>
         <footer>
