--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div><a href="https://www.eurobilltracker.com/?referer=243791"
                 title="Eurobill Tracker"
                 target="_blank" rel="noopener noreferrer">
-                Visit my Eurobill Tracker
+                Visit Eurobill Tracker
             </a></div>
         <hr>
         <footer>
