--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
                 </a>
             </p>
         </div>
-        <div><a href="https://www.eurobilltracker.com/?referer=243791"
-                title="Eurobill Tracker"
-                target="_blank" rel="noopener noreferrer">
-                Visit Eurobill Tracker
-            </a></div>
+        <div><p><a href="https://www.eurobilltracker.com/?referer=243791"
+                    title="Eurobill Tracker"
+                    target="_blank" rel="noopener noreferrer">
+                    Visit Eurobill Tracker
+                </a>
+            </p>
+        </div>
         <hr>
         <footer>
             <p>&copy; <span id="year"></span> Jurkis</p>
