--- a/naudinga.html
+++ b/naudinga.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-KSPPCGGZJE');
+    </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Naudos</title>
@@ -14,7 +24,8 @@
                 <br> Atidaro telefono 'TESTING' meniu. Paimta iš <a
                     href="https://droidwin.com/how-to-enable-5g-on-pixel-6a-6-pro/">šio
                     puslapio, skyrius
-                    "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a></li>
+                    "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a>
+            </li>
             <li>Pasiekti testavimo meniu</li>
             <li>Keisti tinklo nustatymus</li>
         </ul>
@@ -23,8 +34,9 @@
             <p>&copy; <span id="year"></span> Jurkis</p>
         </footer>
         <script>
-            // Set the current year dynamically
-            document.getElementById('year').textContent = new Date().getFullYear();
-        </script>
+        // Set the current year dynamically
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
     </body>
+
 </html>
