--- a/taikinys.html
+++ b/taikinys.html
@@ -12,8 +12,8 @@
   gtag('config', 'G-KSPPCGGZJE');
 </script>
         <meta charset="UTF-8">
-        <meta name="description" content="Free Web tutorials">
-        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="description" content="A personal showcase of a shooting target with bullet marks.">
+        <meta name="keywords" content="target shooting, bullet holes, shooting practice">
         <meta name="author" content="Jurkis">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Taikinys suvarpytasis </title>
