--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <div>
             <h3>Antraštė 3</h3>
             <p>
-                Pirmas paragrafass, kuris yra šiek tiek ilgesnis, kad užimtų
+                Pirmas paragrafas, kuris yra šiek tiek ilgesnis, kad užimtų
                 daugiau vietos. Šis paragrafas yra skirtas parodyti, kaip
                 atrodys tekstas, kai jis bus ilgesnis nei įprasta. Tai padeda
                 geriau suprasti, kaip puslapis atrodys su tikru turiniu.
             </p>
-            <p>Antras paragrafas</p>
+            <p>Antras paragrafas, trumpučiukas</p>
         </div>
         <hr>
         <div>
