--- a/naudinga.html
+++ b/naudinga.html
@@ -14,11 +14,11 @@
     </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Naudos</title>
+        <title>Naudos | Pixel telefonų kodai | Pixel phone codes</title>
     </head>
 
     <body>
-        <h1>Pixel telefono kodai</h1>
+        <h1>Pixel telefonų kodai | Pixel phone codes</h1>
         <ul>
             <li><code>*#*#4636#*#*</code>.
                 <br> Atidaro telefono 'TESTING' meniu. Paimta iš <a
