Pakeitimai index ir naudinga failuose

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
                 <a href="zodziai.html" title="Sugalvotų žodžių puslapis">Žodžių
                     puslapis</a>
             </p>
-            <p><a href="naudinga.html" title="Naudinga">Naudinga</a></p>
+            <p><a href="naudinga.html" title="Naudinga">Naudinga</a>
+                <br>
+                šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
+                bei mano <a href="https://app.getgrass.io/register"
+                    target="_blank" rel="noopener noreferrer">
+                    Grass.io referal code
+                </a> referal kodas.
+            </p>
         </div>
         <div>
             <h3>Antraštė 3</h3>
