--- a/naudinga.html
+++ b/naudinga.html
@@ -29,6 +29,10 @@
             <li>Pasiekti testavimo meniu</li>
             <li>Keisti tinklo nustatymus</li>
         </ul>
+        <h1>GRASS referal code</h1>
+        <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" target="_blank" rel="noopener">
+            yIPN3a6kv1FhxG_
+        </a>
         <hr>
         <footer>
             <p>&copy; <span id="year"></span> Jurkis</p>
