index.html atnaujinimas

--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
             </p>
             <p><a href="naudinga.html" title="Naudinga">Naudinga</a>
                 <br>
-                šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
+                Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
                 bei mano <a href="https://app.getgrass.io/register"
                     target="_blank" rel="noopener noreferrer">
-                    Grass.io referal code
-                </a> referal kodas.
+                    Grass.io referal code</a> referal kodas.
             </p>
         </div>
         <div>
