--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             </p>
             <p><a href="naudinga.html" title="Naudinga">Naudinga</a>
                 <br>
-                šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
-                bei mano <a href="https://app.getgrass.io/register"
+                Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
+                bei mano <a
+                    href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_"
                     target="_blank" rel="noopener noreferrer">
-                    Grass.io referal code
-                </a> referal kodas.
+                    www.grass.io</a> referal kodas.
             </p>
         </div>
         <div>
