Įvairių failų atnaujinimas pagal gothub'ą

--- a/taikinys.html
+++ b/taikinys.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="lt">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE"></script>
+        <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KSPPCGGZJE');
+</script>
         <meta charset="UTF-8">
-        <meta name="description" content="Free Web tutorials">
-        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="description" content="A personal showcase of a shooting target with bullet marks.">
+        <meta name="keywords" content="target shooting, bullet holes, shooting practice">
         <meta name="author" content="Jurkis">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Taikinys suvarpytasis </title>
@@ -18,10 +28,11 @@
         </div>
         <hr>
         <footer>
-            <p>Autorius: Jurkis <br>
-                <a href="./index.html" title="Atgal į pradinį">Atgal į
-                    pradinį</a>
-            </p>
+            <p>&copy; <span id="year"></span> Jurkis</p>
         </footer>
+        <script>
+            // Set the current year dynamically
+            document.getElementById('year').textContent = new Date().getFullYear();
+        </script>
     </body>
 </html>
