--- a/zodziai.html
+++ b/zodziai.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="lt">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE"></script>
+        <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KSPPCGGZJE');
+</script>
         <meta charset="UTF-8">
         <meta name="description" content="Free Web tutorials">
         <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -21,10 +31,11 @@
         </div>
         <hr>
         <footer>
-            <p>Autorius: Jurkis <br>
-                <a href="./index.html" title="Atgal į pradinį">Atgal į
-                    pradinį</a>
-            </p>
+            <p>&copy; <span id="year"></span> Jurkis</p>
         </footer>
+        <script>
+            // Set the current year dynamically
+            document.getElementById('year').textContent = new Date().getFullYear();
+        </script>
     </body>
 </html>
