--- a/zodziai.html
+++ b/zodziai.html
@@ -29,6 +29,16 @@
                 <li>Pliudrė</li>
             </ul>
         </div>
+        <div>
+            <p>
+            <input type="time"/>
+            <input type="date" />   
+            <input type="datetime-local" />
+            <input type="radio" name="radio" value="1" checked> 1
+            <input type="radio" name="radio" value="2"> 2
+            </p>
+        
+        </div>
         <hr>
         <footer>
             <p>&copy; <span id="year"></span> Jurkis</p>
