--- a/index.html
+++ b/index.html
@@ -40,19 +40,13 @@
                 <a href="zodziai.html" title="Sugalvotų žodžių puslapis">Žodžių
                     puslapis</a>
             </p>
-            <p><a href="naudinga.html" title="Naudinga">Naudinga</a>
+            <p><a href="naudinga.html" title="Naudinga">Naudos</a>
                 <br>
                 Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
-<<<<<<< HEAD
                 bei mano <a
                     href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_"
                     target="_blank" rel="noopener noreferrer">
                     www.grass.io</a> referal kodas.
-=======
-                bei mano <a href="https://app.getgrass.io/register"
-                    target="_blank" rel="noopener noreferrer">
-                    Grass.io referal code</a> referal kodas.
->>>>>>> 3a90c73a6dcc9ea39355abc0525123f49e6bf03d
             </p>
         </div>
         <div>
