--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
             <p><a href="naudinga.html" title="Naudinga">Naudinga</a>
                 <br>
                 Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
-<<<<<<< HEAD
                 bei mano <a
                     href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_"
                     target="_blank" rel="noopener noreferrer">
                     www.grass.io</a> referal kodas.
-=======
-                bei mano <a href="https://app.getgrass.io/register"
-                    target="_blank" rel="noopener noreferrer">
-                    Grass.io referal code</a> referal kodas.
->>>>>>> 3a90c73a6dcc9ea39355abc0525123f49e6bf03d
+                <br>
+                <a href="https://vivaldi.com/invite /2f3b4c5d6e7f8g9h/"
+                    title="Check out Vivaldi, the browser I'm using"
+                    target="_blank"
+                    rel="noopener noreferrer">Check out Vivaldi, the browser I'm
+                    using</a>
             </p>
         </div>
         <div>
