--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
                 Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
                 bei mano <a
                     href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_"
-                    target="_blank" rel="noopener noreferrer">
+                    target="_blank"">
                     www.grass.io</a> referal kodas.
                 <br>
-                <a href="https://vivaldi.com/invite /2f3b4c5d6e7f8g9h/"
-                    title="Check out Vivaldi, the browser I'm using"
-                    target="_blank"
-                    rel="noopener noreferrer">Check out Vivaldi, the browser I'm
-                    using</a>
+                <a href="https://vivaldi.com/invite"
+                    title="Check out Vivaldi, the browser I'm using: https://vivaldi.com/invite"
+                    target="_blank" rel="noopener noreferrer">Check out Vivaldi,
+                    the browser I'm using</a>
             </p>
         </div>
         <div>
