--- a/zodziai.html
+++ b/zodziai.html
@@ -25,7 +25,7 @@
         <div>
             <p>Išgalvoti paukščiai retkarčiais pagieda išgalvotus žodžius:</p>
             <ul>
-                <li>Ibytute</li>
+                <li>Pliuškis</li>
                 <li>Pliudrė</li>
             </ul>
         </div>
