style.css ir zodziai,html atnajinimas

--- a/zodziai.html
+++ b/zodziai.html
@@ -23,21 +23,11 @@
     </head>
     <body>
         <div>
-            <p>Išgalvoti paukščiai retkarčiais pagieda išgalvotus žodžius:</p>
+            <h1>Išgalvoti paukščiai retkarčiais pagieda išgalvotus žodžius:</h1>
             <ul>
                 <li>Pliuškis</li>
                 <li>Pliudrė</li>
             </ul>
-        </div>
-        <div>
-            <p>
-            <input type="time"/>
-            <input type="date" />   
-            <input type="datetime-local" />
-            <input type="radio" name="radio" value="1" checked> 1
-            <input type="radio" name="radio" value="2"> 2
-            </p>
-        
         </div>
         <hr>
         <footer>
