--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
         </p>
     </div>
     <div>
-        <h3>Antraštė 3</h3>
-        <p>
-            Pirmas paragrafas, kuris yra šiek tiek ilgesnis, kad užimtų
-            daugiau vietos. Šis paragrafas yra skirtas parodyti, kaip
-            atrodys tekstas, kai jis bus ilgesnis nei įprasta. Tai padeda
-            geriau suprasti, kaip puslapis atrodys su tikru turiniu.
+        <h3>deMicrosofted & deGoogled</h3>
+        <p><a href="switchingsoftware.html" title="Switching Software">Switching Software. Mano deMicrosoftintos
+                kompiuterinės ir deGooglintos telefoninės programos</a>
+            <br>
+            Šiame puslapyje yra mano naudojamos programinės įrangos sąrašas, kurią pakeičiau alternatyvomis, kiek
+            įmanoma.
         </p>
-        <p>Antras paragrafas, trumpučiukas</p>
     </div>
     <hr>
     <div>
