--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -21,9 +21,47 @@
     <h1>Welcome to Switching Software</h1>
     <p>This is a list of software I replaced with alternatives as much as possible.</p>
     <h1>deGoogled</h1>
-    <p>This is a basic HTML5 file.</p>
+    <p>
+    <table class="styled-table">
+        <tr>
+            <th>Original Software</th>
+            <th>Alternative</th>
+        </tr>
+        <tr>
+            <td>Google Chrome</td>
+            <td>Mozilla Firefox</td>
+        </tr>
+        <tr>
+            <td>Microsoft Office</td>
+            <td>LibreOffice</td>
+        </tr>
+        <tr>
+            <td>Google Drive</td>
+            <td>Nextcloud</td>
+        </tr>
+    </table>
+    </p>
     <h1>deMicrosofted</h1>
-    <p>This is a basic HTML5 file.</p>
+    <p>
+    <table class="styled-table">
+        <tr>
+            <th>Original Software</th>
+            <th>Alternative</th>
+        </tr>
+        <tr>
+            <td>Google Chrome</td>
+            <td>Mozilla Firefox</td>
+        </tr>
+        <tr>
+            <td>Microsoft Office</td>
+            <td>LibreOffice</td>
+        </tr>
+        <tr>
+            <td>Google Drive</td>
+            <td>Nextcloud</td>
+        </tr>
+    </table>
+    </p>
 </body>
 
 </html>
