--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -29,15 +29,15 @@
         </tr>
         <tr>
             <td>Google Chrome</td>
-            <td>Mozilla Firefox</td>
+            <td>Vivaldi</td>
         </tr>
         <tr>
             <td>Microsoft Office</td>
             <td>LibreOffice</td>
         </tr>
         <tr>
-            <td>Google Drive</td>
-            <td>Nextcloud</td>
+            <td></td>
+            <td></td>
         </tr>
     </table>
     </p>
@@ -50,15 +50,15 @@
         </tr>
         <tr>
             <td>Google Chrome</td>
-            <td>Mozilla Firefox</td>
+            <td>Vivaldi</td>
         </tr>
         <tr>
             <td>Microsoft Office</td>
             <td>LibreOffice</td>
         </tr>
         <tr>
-            <td>Google Drive</td>
-            <td>Nextcloud</td>
+            <td></td>
+            <td></td>
         </tr>
     </table>
     </p>
