--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -62,6 +62,13 @@
         </tr>
     </table>
     </p>
-</body>
+    <hr>
+    <footer>
+        <p>&copy; <span id="year"></span> Jurkis</p>
+    </footer>
+    <script>
+        // Set the current year dynamically
+        docu
+</body >
 
-</html>
+</html >
