modified index.html sitemap.xml

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
-        Mano bandomasis puslapis
+        Mano puslapis
     </title>
     <meta name="description" content="This is a test webpage showcasing various links and sections.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +43,7 @@
     <div>
         <h3>deMicrosofted & deGoogled</h3>
         <p><a href="switchingsoftware.html" title="Switching Software">Switching Software. Mano deMicrosoftintos
-                kompiuterinės ir deGooglintos telefoninės programos</a>
+                kompiuterinės ir deGooglintos telefoninės programos</a>.
             <br>
             Šiame puslapyje yra mano naudojamos programinės įrangos sąrašas, kurią pakeičiau alternatyvomis, kiek
             įmanoma.
