--- a/index.html
+++ b/index.html
@@ -1,93 +1,77 @@
 <!DOCTYPE html>
 <html lang="lt">
 
-    <head>
-        <!-- Google tag (gtag.js) -->
-        <script async
-            src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE"></script>
-        <script>
+<head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KSPPCGGZJE"></script>
+    <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-KSPPCGGZJE');
     </script>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>
-            Mano bandomasis puslapis
-        </title>
-        <meta name="description"
-            content="This is a test webpage showcasing various links and sections.">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-    </head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>
+        Mano puslapis
+    </title>
+    <meta name="description" content="This is a test webpage showcasing various links and sections.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
 
-    <body>
-        <div>
-            <h1>Antraštė 1</h1>
-            <p>
-                <a href="taikinys.html"
-                    title="Taikinys, kurį suvarpiau aš">Taikinys
-                    suvarpytasis</a>
-            </p>
-            <p><a href="aplankytos_salys.html"
-                    title="Aplankytos šalys">Aplankytos šalys</a></p>
-        </div>
-        <div>
-            <h2>Antraštė 2</h2>
-            <p>
-                <a href="zodziai.html" title="Sugalvotų žodžių puslapis">Žodžių
-                    puslapis</a>
-            </p>
-            <p><a href="naudinga.html" title="Naudinga">Naudinga</a>
-                <br>
-                Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
-                bei mano <a
-                    href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_"
-                    target="_blank"">
-                    www.grass.io</a> referal kodas.
-                <br>
-                <a href="https://vivaldi.com/invite"
-                    title="Check out Vivaldi, the browser I'm using: https://vivaldi.com/invite"
-                    target="_blank" rel="noopener noreferrer">Check out Vivaldi,
-                    the browser I'm using</a>
-            </p>
-        </div>
-        <div>
-            <h3>Antraštė 3</h3>
-            <p>
-                Pirmas paragrafas, kuris yra šiek tiek ilgesnis, kad užimtų
-                daugiau vietos. Šis paragrafas yra skirtas parodyti, kaip
-                atrodys tekstas, kai jis bus ilgesnis nei įprasta. Tai padeda
-                geriau suprasti, kaip puslapis atrodys su tikru turiniu.
-            </p>
-            <p>Antras paragrafas, trumpučiukas</p>
-        </div>
-        <hr>
-        <div>
-            <p>Aš Strava'oje: <a href="https://strava.com/athletes/129115054"
-                    title="Mano vaikščiojimų pasiekimai Stravoje"
-                    class="strava-badge- strava-badge-follow" target="_blank">
-                    <img src="//badges.strava.com/echelon-sprite-16.png"
-                        alt="Strava">
-                </a>
-            </p>
-        </div>
-        <div><p><a href="https://www.eurobilltracker.com/?referer=243791"
-                    title="Eurobill Tracker"
-                    target="_blank" rel="noopener noreferrer">
-                    Visit Eurobill Tracker
-                </a>
-            </p>
-        </div>
-        <hr>
-        <footer>
-            <p>&copy; <span id="year"></span> Jurkis</p>
-        </footer>
-        <script>
-            // Set the current year dynamically
-            document.getElementById('year').textContent = new Date().getFullYear();
-        </script>
-    </body>
+<body>
+    <div>
+        <h1>Antraštė 1</h1>
+        <p>
+            <a href="taikinys.html" title="Taikinys, kurį suvarpiau aš">Taikinys
+                suvarpytasis</a>
+        </p>
+        <p><a href="aplankytos_salys.html" title="Aplankytos šalys">Aplankytos šalys</a></p>
+    </div>
+    <div>
+        <h2>Antraštė 2</h2>
+        <p><a href="naudinga.html" title="Naudinga">Naudos</a>
+            <br>
+            Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
+            bei mano <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" target="_blank"
+                rel="noopener noreferrer">
+                www.grass.io</a> referal kodas.
+        </p>
+    </div>
+    <div>
+        <h3>deMicrosofted & deGoogled</h3>
+        <p><a href="switchingsoftware.html" title="Switching Software">Switching Software. Mano deMicrosoftintos
+                kompiuterinės ir deGooglintos telefoninės programos</a>.
+            <br>
+            Šiame puslapyje yra mano naudojamos programinės įrangos sąrašas, kurią pakeičiau alternatyvomis, kiek
+            įmanoma.
+        </p>
+    </div>
+    <hr>
+    <div>
+        <p>Aš Strava'oje: <a href="https://strava.com/athletes/129115054" title="Mano vaikščiojimų pasiekimai Stravoje"
+                class="strava-badge- strava-badge-follow" target="_blank">
+                <img src="//badges.strava.com/echelon-sprite-16.png" alt="Strava">
+            </a>
+        </p>
+    </div>
+    <div>
+        <p><a href="https://www.eurobilltracker.com/?referer=243791" title="Eurobill Tracker" target="_blank"
+                rel="noopener noreferrer">
+                Visit Eurobill Tracker
+            </a>
+        </p>
+    </div>
+    <hr>
+    <footer>
+        <p>&copy; <span id="year"></span> Jurkis</p>
+    </footer>
+    <script>
+        // Set the current year dynamically
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
+</body>
+
 </html>
