--- a/aplankytos_salys.html
+++ b/aplankytos_salys.html
@@ -35,7 +35,7 @@
         </div>
         <hr>
         <footer>
-            <p>&copy; <span id="year"></span> Jurkis</p>
+            <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
         </footer>
         <script>
         // Set the current year dynamically
