--- a/naudinga.html
+++ b/naudinga.html
@@ -36,7 +36,7 @@
         </a>
         <hr>
         <footer>
-            <p>&copy; <span id="year"></span> Jurkis</p>
+            <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
         </footer>
         <script>
         // Set the current year dynamically
