--- a/taikinys.html
+++ b/taikinys.html
@@ -29,7 +29,7 @@
     </div>
     <hr>
     <footer>
-        <p>&copy; <span id="year"></span> Jurkis</p>
+        <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
     </footer>
     <script>
         // Set the current year dynamically
