--- a/taikinys.html
+++ b/taikinys.html
@@ -26,6 +26,8 @@
             <br>
             <img src="./paveiksleliai/PXL_20241108_070651714.jpg" width="800" height="800" alt="Taikinys suvarpytasis">
         </p>
+        <p>O čia aš sinchronizuoju folderius rsync -avuP --exclude='.git/' Documents/github/jurkis.github.io/
+            Documents/codeberg/jurkis.github.io/</p>
     </div>
     <hr>
     <footer>
