modified:   taikinys.html

--- a/taikinys.html
+++ b/taikinys.html
@@ -22,9 +22,10 @@
 
 <body>
     <div>
-        <p>Štai taip aš pašaudžiau:
-            <br>
-            <img src="./paveiksleliai/PXL_20241108_070651714.jpg" width="800" height="800" alt="Taikinys suvarpytasis">
+        <p>
+        <h1>Štai taip aš pašaudžiau:</h1>
+        <br>
+        <img src="./paveiksleliai/PXL_20241108_070651714.jpg" width="800" height="800" alt="Taikinys suvarpytasis">
         </p>
         <p>O čia aš sinchronizuoju folderius: rsync -avuP --exclude='.git/' --delete Documents/github/jurkis.github.io/
             Documents/codeberg/jurkis.github.io/</p>
