modified:   index.html new file:   structured_document.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>
         Mano puslapis
     </title>
-    <meta name="description" content="This is a test webpage showcasing various links and sections.">
+    <meta name="description" content="Pradinis puslapis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
