modified:   index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <div>
-        <h1>Antraštė 1</h1>
+        <h1>Apie mane</h1>
         <p>
             <a href="taikinys.html" title="Taikinys, kurį suvarpiau aš">Taikinys
                 suvarpytasis</a>
@@ -31,7 +31,7 @@
         <p><a href="aplankytos_salys.html" title="Aplankytos šalys">Aplankytos šalys</a></p>
     </div>
     <div>
-        <h2>Antraštė 2</h2>
+        <h2>Naudos</h2>
         <p><a href="naudinga.html" title="Naudinga">Naudos</a>
             <br>
             Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
