modified:   taikinys.html

--- a/taikinys.html
+++ b/taikinys.html
@@ -25,7 +25,8 @@
         <p>
         <h1>Štai taip aš pašaudžiau:</h1>
         <br>
-        <img src="./paveiksleliai/popierinis_taikinys.jpg" width="800" height="800" alt="Popereinis taikinys su šūvių žymėmis">
+        <img src="./paveiksleliai/popierinis_taikinys.jpg" width="800" height="800"
+            alt="Popierinis taikinys su šūvių žymėmis">
         </p>
         <p>O čia aš sinchronizuoju folderius: rsync -avuP --exclude='.git/' --delete Documents/github/jurkis.github.io/
             Documents/codeberg/jurkis.github.io/</p>
