modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </div>
     <div>
         <h2>Naudos</h2>
-        <p><a href="naudinga.html" title="Naudinga">Naudos</a>
+        <p><a href="naudinga.html" title="Naudos">Naudos</a>
             <br>
             Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
-            bei mano <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" target="_blank"
-                rel="noopener noreferrer">
+            bei mano <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" title="GRASS referal kodas"
+                target="_blank" rel="noopener noreferrer">
                 www.grass.io</a> referal kodas.
         </p>
     </div>
