modified:   index.html renamed:    paveiksleliai/PXL_20241108_070651714.jpg -> paveiksleliai/popierinis_taikinys.jpg new file:   structured_document.html modified:   taikinys.html

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <title>
         Mano puslapis
     </title>
-    <meta name="description" content="This is a test webpage showcasing various links and sections.">
+    <meta name="description" content="Pradinis puslapis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div>
-        <h1>Antraštė 1</h1>
+        <h1>Apie mane</h1>
         <p>
             <a href="taikinys.html" title="Taikinys, kurį suvarpiau aš">Taikinys
                 suvarpytasis</a>
@@ -31,12 +31,12 @@
         <p><a href="aplankytos_salys.html" title="Aplankytos šalys">Aplankytos šalys</a></p>
     </div>
     <div>
-        <h2>Antraštė 2</h2>
-        <p><a href="naudinga.html" title="Naudinga">Naudos</a>
+        <h2>Naudos</h2>
+        <p><a href="naudinga.html" title="Naudos">Naudos</a>
             <br>
             Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
-            bei mano <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" target="_blank"
-                rel="noopener noreferrer">
+            bei mano <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" title="GRASS referal kodas"
+                target="_blank" rel="noopener noreferrer">
                 www.grass.io</a> referal kodas.
         </p>
     </div>
