--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <div>
-        <h1>Apie mane</h1>
+        <h1>Iš mano gyvenimo</h1>
         <p>
             <a href="taikinys.html" title="Taikinys, kurį suvarpiau aš">Taikinys
                 suvarpytasis</a>
@@ -66,7 +66,7 @@
     </div>
     <hr>
     <footer>
-        <p>&copy; <span id="year"></span> Jurkis </p>
+        <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
     </footer>
     <script>
         // Set the current year dynamically
