modified: switchingsoftware.html

--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -28,12 +28,13 @@
             <th>Alternative</th>
         </tr>
         <tr>
-            <td>Google Chrome</td>
-            <td>Vivaldi</td>
+            <td>Google Play</td>
+            <td><a href="https://f-droid.org" target="_blank">F-Droid</a> (partyally)</td>
         </tr>
         <tr>
-            <td>Microsoft Office</td>
-            <td>LibreOffice</td>
+            <td>Google Maps</td>
+            <td><a href="https://osmand.net" target="_blank">OsmAnd</a>; <a href="https://www.comaps.app"
+                    target="_blank">CoMaps</a>; <a href="https://organicmaps.app" target="_blank">Organic Maps</a></td>
         </tr>
         <tr>
             <td></td>
@@ -49,17 +50,26 @@
             <th>Alternative</th>
         </tr>
         <tr>
+            <td>Microsoft Widows 10</td>
+            <td><a href="https://zorin.com" target="_blank">Zorin OS</a></td>
+        </tr>
+        <tr>
             <td>Google Chrome</td>
-            <td>Vivaldi</td>
+            <td><a href="https://vivaldi.com" target="_blank">Vivaldi</a></td>
         </tr>
         <tr>
             <td>Microsoft Office</td>
-            <td>LibreOffice</td>
+            <td><a href="https://www.libreoffice.org" target="_blank">LibreOffice</a></td>
         </tr>
         <tr>
             <td></td>
             <td></td>
         </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+
     </table>
     </p>
     <hr>
@@ -70,6 +80,6 @@
         // Set the current year dynamically
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
-</body >
+</body>
 
-</html >
+</html>
