--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
-        Mano puslapis
+        1970. Va tada ir prasidėjo.
     </title>
     <meta name="description" content="Pradinis puslapis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
